name:                 tinylog
version:              0.1
synopsis:             Simplistic logging using fast-logger.
license:              OtherLicense
license-file:         LICENSE
category:             System
build-type:           Simple
cabal-version:        >= 1.10

description:
    Trivial logger on top of fast-logger.

source-repository head
    type:             git
    location:         git://github.com/twittner/tinylog.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs -funbox-strict-fields
    ghc-prof-options: -prof -auto-all

    exposed-modules:
          System.Logger
        , System.LoggerT

    build-depends:
          base         == 4.*
        , bytestring   >= 0.10
        , date-cache   >= 0.3
        , exceptions   >= 0.3
        , fast-logger  == 2.0.*
        , mtl          >= 2.1
        , transformers >= 0.3
        , unix-time    >= 0.1
