name:                 tinylog
version:              0.8
synopsis:             Simplistic logging using fast-logger.
author:               Toralf Wittner
maintainer:           Toralf Wittner <tw@dtex.org>
copyright:            (c) 2014 Toralf Wittner
license:              MPL-2.0
license-file:         LICENSE
category:             System
build-type:           Simple
cabal-version:        >= 1.20

description:
    Trivial logger on top of fast-logger.

source-repository head
    type:             git
    location:         git://github.com/twittner/tinylog.git

library
    default-language: Haskell2010
    hs-source-dirs:   src
    ghc-options:      -Wall -O2 -fwarn-tabs
    ghc-prof-options: -prof -auto-all

    exposed-modules:
          System.Logger
        , System.Logger.Class
        , System.Logger.Message

    build-depends:
          base         == 4.*
        , bytestring   >= 0.10
        , date-cache   >= 0.3
        , fast-logger  >= 2.1.4 && < 2.2
        , mtl          >= 2.1
        , text         >= 0.11  && < 1.2
        , transformers >= 0.3
        , unix-time    >= 0.1
